// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scale > basic functionality > should return properly with #808080 and undefined 1`] = `
{
  "100": "#ededed",
  "200": "#dedede",
  "300": "#cbcbcb",
  "400": "#b6b6b6",
  "50": "#f5f5f5",
  "500": "#9e9e9e",
  "600": "#848484",
  "700": "#686868",
  "800": "#4d4d4d",
  "900": "#313131",
  "950": "#161616",
}
`;

exports[`scale > basic functionality > should return properly with #d4ffc7 and { variant: 'vibrant' } 1`] = `
{
  "100": "#c9ffb9",
  "200": "#bbf0aa",
  "300": "#a8dd98",
  "400": "#93c783",
  "50": "#e1ffd8",
  "500": "#7bae6c",
  "600": "#629352",
  "700": "#477737",
  "800": "#2b5a1a",
  "900": "#0c3c00",
  "950": "#021d00",
}
`;

exports[`scale > basic functionality > should return properly with #ff0044 and { format: 'oklch' } 1`] = `
{
  "100": "oklch(94.565% 0.03542 19.90218)",
  "200": "oklch(90.113% 0.06684 19.90218)",
  "300": "oklch(84.348% 0.11123 19.90218)",
  "400": "oklch(77.52% 0.17009 19.90218)",
  "50": "oklch(97% 0.01918 19.90218)",
  "500": "oklch(69.776% 0.24668 19.90218)",
  "600": "oklch(61.214% 0.25404 19.90218)",
  "700": "oklch(51.904% 0.23498 19.90218)",
  "800": "oklch(41.903% 0.1897 19.90218)",
  "900": "oklch(31.256% 0.1415 19.90218)",
  "950": "oklch(20% 0.09055 19.90218)",
}
`;

exports[`scale > basic functionality > should return properly with #ff0044 and { maxLightness: 0.9 } 1`] = `
{
  "100": "#ffc1c0",
  "200": "#ffabaa",
  "300": "#ff8a8e",
  "400": "#ff5a6a",
  "50": "#ffcdcc",
  "500": "#ff194a",
  "600": "#e90032",
  "700": "#be0025",
  "800": "#900019",
  "900": "#62000e",
  "950": "#350004",
}
`;

exports[`scale > basic functionality > should return properly with #ff0044 and { minLightness: 0.1 } 1`] = `
{
  "100": "#ffe3e2",
  "200": "#ffc9c8",
  "300": "#ffa5a5",
  "400": "#ff717a",
  "50": "#fff0f0",
  "500": "#ff214d",
  "600": "#e60030",
  "700": "#af0021",
  "800": "#770013",
  "900": "#400006",
  "950": "#0e0001",
}
`;

exports[`scale > basic functionality > should return properly with #ff0044 and undefined 1`] = `
{
  "100": "#ffe4e3",
  "200": "#ffcdcc",
  "300": "#ffaeae",
  "400": "#ff8488",
  "50": "#fff0f0",
  "500": "#ff3d5a",
  "600": "#f7003e",
  "700": "#cd0029",
  "800": "#9a001c",
  "900": "#66000f",
  "950": "#350004",
}
`;

exports[`scale > basic functionality > should return properly with hsl(136 100% 50%) and { variant: 'deep' } 1`] = `
{
  "100": "hsl(120 100% 87.65%)",
  "200": "hsl(123.86 100% 72.55%)",
  "300": "hsl(124.8 82.42% 64.31%)",
  "400": "hsl(126.92 66.67% 54.12%)",
  "50": "hsl(120 100% 93.53%)",
  "500": "hsl(134.52 95.88% 38.04%)",
  "600": "hsl(120 100% 31.96%)",
  "700": "hsl(120 100% 26.08%)",
  "800": "hsl(120 100% 19.22%)",
  "900": "hsl(120 100% 12.55%)",
  "950": "hsl(120 100% 6.08%)",
}
`;

exports[`scale > basic functionality > should return properly with hsl(136 100% 50%) and undefined 1`] = `
{
  "100": "hsl(120 100% 87.65%)",
  "200": "hsl(123.86 100% 72.55%)",
  "300": "hsl(133.66 100% 48.24%)",
  "400": "hsl(122.15 100% 43.73%)",
  "50": "hsl(120 100% 93.53%)",
  "500": "hsl(120 100% 38.63%)",
  "600": "hsl(120 100% 32.75%)",
  "700": "hsl(120 100% 26.08%)",
  "800": "hsl(120 100% 19.22%)",
  "900": "hsl(120 100% 12.55%)",
  "950": "hsl(120 100% 6.08%)",
}
`;

exports[`scale > basic functionality > should return properly with lightblue and undefined 1`] = `
{
  "100": "#cff4ff",
  "200": "#bbe7f5",
  "300": "#a9d4e2",
  "400": "#94becc",
  "50": "#e5f9ff",
  "500": "#7ca5b3",
  "600": "#628b98",
  "700": "#48707c",
  "800": "#2c535f",
  "900": "#0d3742",
  "950": "#001a25",
}
`;

exports[`scale > basic functionality > should return properly with oklab(70.622% 0.1374 0.14283) and { lightnessCurve: 1.2 } 1`] = `
{
  "100": "oklab(92.142% 0.0388 0.04033)",
  "200": "oklab(85.838% 0.0734 0.0763)",
  "300": "oklab(78.843% 0.11617 0.12076)",
  "400": "oklab(71.357% 0.1374 0.14283)",
  "50": "oklab(97% 0.01429 0.01485)",
  "500": "oklab(63.484% 0.1374 0.14283)",
  "600": "oklab(55.287% 0.12205 0.12687)",
  "700": "oklab(46.811% 0.10334 0.10742)",
  "800": "oklab(38.089% 0.08409 0.08741)",
  "900": "oklab(29.145% 0.06434 0.06689)",
  "950": "oklab(20% 0.04416 0.04591)",
}
`;

exports[`scale > basic functionality > should return properly with oklab(70.622% 0.1374 0.14283) and { variant: 'neutral' } 1`] = `
{
  "100": "oklab(94.565% 0.02635 0.02739)",
  "200": "oklab(90.113% 0.04957 0.05153)",
  "300": "oklab(84.348% 0.0687 0.07142)",
  "400": "oklab(77.52% 0.0687 0.07142)",
  "50": "oklab(97% 0.01429 0.01485)",
  "500": "oklab(69.776% 0.0687 0.07142)",
  "600": "oklab(61.214% 0.0687 0.07142)",
  "700": "oklab(51.904% 0.0687 0.07142)",
  "800": "oklab(41.903% 0.0687 0.07142)",
  "900": "oklab(31.256% 0.0687 0.07142)",
  "950": "oklab(20% 0.04416 0.04591)",
}
`;

exports[`scale > basic functionality > should return properly with oklab(70.622% 0.1374 0.14283) and undefined 1`] = `
{
  "100": "oklab(94.565% 0.02635 0.02739)",
  "200": "oklab(90.113% 0.04957 0.05153)",
  "300": "oklab(84.348% 0.08211 0.08536)",
  "400": "oklab(77.52% 0.12484 0.12977)",
  "50": "oklab(97% 0.01429 0.01485)",
  "500": "oklab(69.776% 0.1374 0.14283)",
  "600": "oklab(61.214% 0.13513 0.14047)",
  "700": "oklab(51.904% 0.11458 0.11911)",
  "800": "oklab(41.903% 0.0925 0.09616)",
  "900": "oklab(31.256% 0.069 0.07173)",
  "950": "oklab(20% 0.04416 0.04591)",
}
`;

exports[`scale > basic functionality > should return properly with oklch(0.65 0.3 27.34) and undefined 1`] = `
{
  "100": "oklch(94.565% 0.03537 27.34)",
  "200": "oklch(90.113% 0.06668 27.34)",
  "300": "oklch(84.348% 0.11085 27.34)",
  "400": "oklch(77.52% 0.16928 27.34)",
  "50": "oklch(97% 0.01916 27.34)",
  "500": "oklch(69.776% 0.24509 27.34)",
  "600": "oklch(61.214% 0.28124 27.34)",
  "700": "oklch(51.904% 0.23847 27.34)",
  "800": "oklch(41.903% 0.19252 27.34)",
  "900": "oklch(31.256% 0.14361 27.34)",
  "950": "oklch(20% 0.0919 27.34)",
}
`;

exports[`scale > basic functionality > should return properly with oklch(47.642% 0.29956 274.93693) and { variant: 'pastel' } 1`] = `
{
  "100": "oklch(94.565% 0.02854 274.93693)",
  "200": "oklch(90.113% 0.0527 274.93693)",
  "300": "oklch(84.348% 0.08505 274.93693)",
  "400": "oklch(77.52% 0.08987 274.93693)",
  "50": "oklch(97% 0.01563 274.93693)",
  "500": "oklch(69.776% 0.08987 274.93693)",
  "600": "oklch(61.214% 0.08987 274.93693)",
  "700": "oklch(51.904% 0.08987 274.93693)",
  "800": "oklch(41.903% 0.08987 274.93693)",
  "900": "oklch(31.256% 0.08987 274.93693)",
  "950": "oklch(20% 0.08987 274.93693)",
}
`;

exports[`scale > basic functionality > should return properly with oklch(47.642% 0.29956 274.93693) and undefined 1`] = `
{
  "100": "oklch(94.565% 0.02854 274.93693)",
  "200": "oklch(90.113% 0.0527 274.93693)",
  "300": "oklch(84.348% 0.08505 274.93693)",
  "400": "oklch(77.52% 0.12496 274.93693)",
  "50": "oklch(97% 0.01563 274.93693)",
  "500": "oklch(69.776% 0.1723 274.93693)",
  "600": "oklch(61.214% 0.22721 274.93693)",
  "700": "oklch(51.904% 0.28979 274.93693)",
  "800": "oklch(41.903% 0.26583 274.93693)",
  "900": "oklch(31.256% 0.19829 274.93693)",
  "950": "oklch(20% 0.12688 274.93693)",
}
`;

exports[`scale > basic functionality > should return properly with rgb(255 230 109) and { variant: 'subtle' } 1`] = `
{
  "100": "rgb(242 238 216)",
  "200": "rgb(227 223 202)",
  "300": "rgb(208 204 183)",
  "400": "rgb(186 182 162)",
  "50": "rgb(250 246 224)",
  "500": "rgb(162 158 138)",
  "600": "rgb(136 132 113)",
  "700": "rgb(109 105 86)",
  "800": "rgb(81 77 59)",
  "900": "rgb(53 49 32)",
  "950": "rgb(25 22 6)",
}
`;

exports[`scale > basic functionality > should return properly with rgb(255 230 109) and undefined 1`] = `
{
  "100": "rgb(255 238 141)",
  "200": "rgb(248 223 102)",
  "300": "rgb(229 204 81)",
  "400": "rgb(207 182 54)",
  "50": "rgb(255 246 195)",
  "500": "rgb(182 157 8)",
  "600": "rgb(155 131 0)",
  "700": "rgb(124 104 0)",
  "800": "rgb(92 76 0)",
  "900": "rgb(59 48 0)",
  "950": "rgb(28 22 0)",
}
`;

exports[`scale > chromaCurve option > should apply parabolic curve with chromaCurve: 1 (legacy) 1`] = `
{
  "100": "oklch(94.565% 0.02854 274.93693)",
  "200": "oklch(90.113% 0.0527 274.93693)",
  "300": "oklch(84.348% 0.08505 274.93693)",
  "400": "oklch(77.52% 0.12496 274.93693)",
  "50": "oklch(97% 0.01563 274.93693)",
  "500": "oklch(69.776% 0.1723 274.93693)",
  "600": "oklch(61.214% 0.22721 274.93693)",
  "700": "oklch(51.904% 0.28979 274.93693)",
  "800": "oklch(41.903% 0.26583 274.93693)",
  "900": "oklch(31.256% 0.19829 274.93693)",
  "950": "oklch(20% 0.12688 274.93693)",
}
`;

exports[`scale > chromaCurve option > should interpolate with chromaCurve: 0.5 1`] = `
{
  "100": "oklch(94.565% 0.02854 274.93693)",
  "200": "oklch(90.113% 0.0527 274.93693)",
  "300": "oklch(84.348% 0.08505 274.93693)",
  "400": "oklch(77.52% 0.12496 274.93693)",
  "50": "oklch(97% 0.01563 274.93693)",
  "500": "oklch(69.776% 0.1723 274.93693)",
  "600": "oklch(61.214% 0.22721 274.93693)",
  "700": "oklch(51.904% 0.28979 274.93693)",
  "800": "oklch(41.903% 0.26583 274.93693)",
  "900": "oklch(31.256% 0.19829 274.93693)",
  "950": "oklch(20% 0.12688 274.93693)",
}
`;

exports[`scale > chromaCurve option > should maintain constant chroma with chromaCurve: 0 (default) 1`] = `
{
  "100": "oklch(94.565% 0.02854 274.93693)",
  "200": "oklch(90.113% 0.0527 274.93693)",
  "300": "oklch(84.348% 0.08505 274.93693)",
  "400": "oklch(77.52% 0.12496 274.93693)",
  "50": "oklch(97% 0.01563 274.93693)",
  "500": "oklch(69.776% 0.1723 274.93693)",
  "600": "oklch(61.214% 0.22721 274.93693)",
  "700": "oklch(51.904% 0.28979 274.93693)",
  "800": "oklch(41.903% 0.26583 274.93693)",
  "900": "oklch(31.256% 0.19829 274.93693)",
  "950": "oklch(20% 0.12688 274.93693)",
}
`;

exports[`scale > lock option > should apply "chromaCurve" to locked position 1`] = `"#234e2f"`;

exports[`scale > lock option > should apply "saturation" to locked position 1`] = `"#38483b"`;

exports[`scale > lock option > should ignore invalid lock value and warn 1`] = `
{
  "100": "#e7ecff",
  "200": "#d4dcff",
  "300": "#bbc8ff",
  "400": "#9fafff",
  "50": "#f2f5ff",
  "500": "#8091ff",
  "600": "#626bff",
  "700": "#4b30ff",
  "800": "#3800d8",
  "900": "#230092",
  "950": "#0e004d",
}
`;

exports[`scale > lock option > should lock at first key (50) 1`] = `
{
  "100": "oklch(59.28% 0.21891 292.71711)",
  "200": "oklch(56.935% 0.21891 292.71711)",
  "300": "oklch(53.898% 0.21891 292.71711)",
  "400": "oklch(50.301% 0.21891 292.71711)",
  "50": "oklch(60.563% 0.21891 292.71711)",
  "500": "oklch(46.222% 0.21891 292.71711)",
  "600": "oklch(41.711% 0.21891 292.71711)",
  "700": "oklch(36.807% 0.21095 292.71711)",
  "800": "oklch(31.538% 0.18075 292.71711)",
  "900": "oklch(25.93% 0.14861 292.71711)",
  "950": "oklch(20% 0.11463 292.71711)",
}
`;

exports[`scale > lock option > should lock at last key (950) 1`] = `
{
  "100": "oklch(95.848% 0.02384 292.71711)",
  "200": "oklch(93.741% 0.0362 292.71711)",
  "300": "oklch(91.013% 0.05247 292.71711)",
  "400": "oklch(87.782% 0.07213 292.71711)",
  "50": "oklch(97% 0.01716 292.71711)",
  "500": "oklch(84.118% 0.09495 292.71711)",
  "600": "oklch(80.066% 0.12084 292.71711)",
  "700": "oklch(75.66% 0.14977 292.71711)",
  "800": "oklch(70.928% 0.18176 292.71711)",
  "900": "oklch(65.89% 0.21685 292.71711)",
  "950": "oklch(60.563% 0.21891 292.71711)",
}
`;

exports[`scale > lock option > should lock input color at step 500 1`] = `
{
  "100": "oklch(93.741% 0.0362 292.71711)",
  "200": "oklch(87.782% 0.07213 292.71711)",
  "300": "oklch(80.066% 0.12084 292.71711)",
  "400": "oklch(70.928% 0.18176 292.71711)",
  "50": "oklch(97% 0.01716 292.71711)",
  "500": "oklch(60.563% 0.21891 292.71711)",
  "600": "oklch(56.935% 0.21891 292.71711)",
  "700": "oklch(50.301% 0.21891 292.71711)",
  "800": "oklch(41.711% 0.21891 292.71711)",
  "900": "oklch(31.538% 0.18075 292.71711)",
  "950": "oklch(20% 0.11463 292.71711)",
}
`;

exports[`scale > lock option > should work with different step counts 1`] = `
{
  "100": "oklch(97% 0.01563 274.93693)",
  "300": "oklch(79.549% 0.11292 274.93693)",
  "500": "oklch(47.642% 0.29956 274.93693)",
  "700": "oklch(37.869% 0.24024 274.93693)",
  "900": "oklch(20% 0.12688 274.93693)",
}
`;

exports[`scale > mode option > should generate dark mode with inverted lightness 1`] = `
{
  "100": "#12005b",
  "200": "#1a0076",
  "300": "#25009b",
  "400": "#3300c8",
  "50": "#0e004d",
  "500": "#4300fd",
  "600": "#534eff",
  "700": "#6f7dff",
  "800": "#95a6ff",
  "900": "#c1cdff",
  "950": "#f2f5ff",
}
`;

exports[`scale > mode option > should generate light mode by default 1`] = `
{
  "100": "#e7ecff",
  "200": "#d4dcff",
  "300": "#bbc8ff",
  "400": "#9fafff",
  "50": "#f2f5ff",
  "500": "#8091ff",
  "600": "#626bff",
  "700": "#4b30ff",
  "800": "#3800d8",
  "900": "#230092",
  "950": "#0e004d",
}
`;

exports[`scale > option interactions > should work with lock + mode: dark 1`] = `
{
  "100": "oklch(22.472% 0.14257 274.93693)",
  "200": "oklch(26.993% 0.17124 274.93693)",
  "300": "oklch(32.847% 0.20838 274.93693)",
  "400": "oklch(39.779% 0.25235 274.93693)",
  "50": "oklch(20% 0.12688 274.93693)",
  "500": "oklch(47.642% 0.29956 274.93693)",
  "600": "oklch(52.057% 0.28874 274.93693)",
  "700": "oklch(60.129% 0.23435 274.93693)",
  "800": "oklch(70.582% 0.16728 274.93693)",
  "900": "oklch(82.96% 0.09303 274.93693)",
  "950": "oklch(97% 0.01563 274.93693)",
}
`;

exports[`scale > option interactions > should work with lock + steps 1`] = `
{
  "100": "oklch(97% 0.01563 274.93693)",
  "300": "oklch(79.549% 0.11292 274.93693)",
  "500": "oklch(47.642% 0.29956 274.93693)",
  "700": "oklch(37.869% 0.24024 274.93693)",
  "900": "oklch(20% 0.12688 274.93693)",
}
`;

exports[`scale > saturation option > should generate grayscale with saturation: 0 1`] = `
{
  "100": "oklch(94.565% 0 274.93693)",
  "200": "oklch(90.113% 0 274.93693)",
  "300": "oklch(84.348% 0 274.93693)",
  "400": "oklch(77.52% 0 274.93693)",
  "50": "oklch(97% 0 274.93693)",
  "500": "oklch(69.776% 0 274.93693)",
  "600": "oklch(61.214% 0 274.93693)",
  "700": "oklch(51.904% 0 274.93693)",
  "800": "oklch(41.903% 0 274.93693)",
  "900": "oklch(31.256% 0 274.93693)",
  "950": "oklch(20% 0 274.93693)",
}
`;

exports[`scale > saturation option > should use max chroma with saturation: 100 1`] = `
{
  "100": "oklch(94.565% 0.02854 274.93693)",
  "200": "oklch(90.113% 0.0527 274.93693)",
  "300": "oklch(84.348% 0.08505 274.93693)",
  "400": "oklch(77.52% 0.12496 274.93693)",
  "50": "oklch(97% 0.01563 274.93693)",
  "500": "oklch(69.776% 0.1723 274.93693)",
  "600": "oklch(61.214% 0.22721 274.93693)",
  "700": "oklch(51.904% 0.28979 274.93693)",
  "800": "oklch(41.903% 0.26583 274.93693)",
  "900": "oklch(31.256% 0.19829 274.93693)",
  "950": "oklch(20% 0.12688 274.93693)",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 3 1`] = `
{
  "100": "#f2f5ff",
  "500": "#8091ff",
  "900": "#0e004d",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 4 1`] = `
{
  "100": "#f2f5ff",
  "400": "#b2c0ff",
  "600": "#5249ff",
  "900": "#0e004d",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 5 1`] = `
{
  "100": "#f2f5ff",
  "300": "#c8d3ff",
  "500": "#8091ff",
  "700": "#4300fc",
  "900": "#0e004d",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 6 1`] = `
{
  "100": "#f2f5ff",
  "200": "#d4dcff",
  "400": "#9fafff",
  "600": "#626bff",
  "800": "#3800d8",
  "900": "#0e004d",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 7 1`] = `
{
  "100": "#f2f5ff",
  "200": "#dbe2ff",
  "400": "#b2c0ff",
  "500": "#8091ff",
  "600": "#5249ff",
  "800": "#3100c1",
  "900": "#0e004d",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 8 1`] = `
{
  "100": "#f2f5ff",
  "200": "#dfe6ff",
  "300": "#bfcbff",
  "500": "#96a7ff",
  "600": "#6b77ff",
  "700": "#4920ff",
  "800": "#2c00b0",
  "900": "#0e004d",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 9 1`] = `
{
  "100": "#f2f5ff",
  "200": "#e3e9ff",
  "300": "#c8d3ff",
  "400": "#a6b6ff",
  "500": "#8091ff",
  "600": "#5c60ff",
  "700": "#4300fc",
  "800": "#2800a3",
  "900": "#0e004d",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 10 1`] = `
{
  "100": "#e5ebff",
  "200": "#cfd8ff",
  "300": "#b2c0ff",
  "400": "#91a2ff",
  "50": "#f2f5ff",
  "500": "#6f7dff",
  "600": "#5249ff",
  "700": "#3d00e8",
  "800": "#250099",
  "900": "#0e004d",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 11 1`] = `
{
  "100": "#e7ecff",
  "200": "#d4dcff",
  "300": "#bbc8ff",
  "400": "#9fafff",
  "50": "#f2f5ff",
  "500": "#8091ff",
  "600": "#626bff",
  "700": "#4b30ff",
  "800": "#3800d8",
  "900": "#230092",
  "950": "#0e004d",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 12 1`] = `
{
  "100": "#e8edff",
  "150": "#d8e0ff",
  "200": "#c2ceff",
  "300": "#a9b9ff",
  "400": "#8e9fff",
  "50": "#f2f5ff",
  "500": "#7281ff",
  "600": "#595aff",
  "700": "#4716ff",
  "800": "#3400cb",
  "900": "#21008b",
  "950": "#0e004d",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 13 1`] = `
{
  "100": "#eaeeff",
  "150": "#dbe2ff",
  "200": "#c8d3ff",
  "300": "#b2c0ff",
  "400": "#9aaaff",
  "50": "#f2f5ff",
  "500": "#8091ff",
  "600": "#6772ff",
  "700": "#5249ff",
  "800": "#4300fc",
  "850": "#3100c1",
  "900": "#1f0086",
  "950": "#0e004d",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 14 1`] = `
{
  "100": "#eaefff",
  "150": "#dde4ff",
  "200": "#ccd7ff",
  "250": "#b9c6ff",
  "300": "#a3b3ff",
  "400": "#8c9dff",
  "50": "#f2f5ff",
  "500": "#7484ff",
  "600": "#5e65ff",
  "700": "#4d37ff",
  "800": "#3f00ee",
  "850": "#2e00b8",
  "900": "#1e0082",
  "950": "#0e004d",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 15 1`] = `
{
  "100": "#ebefff",
  "150": "#dfe6ff",
  "200": "#d0daff",
  "250": "#bfcbff",
  "300": "#abbaff",
  "400": "#96a7ff",
  "50": "#f2f5ff",
  "500": "#8091ff",
  "600": "#6b77ff",
  "700": "#5757ff",
  "750": "#4920ff",
  "800": "#3b00e2",
  "850": "#2c00b0",
  "900": "#1c007e",
  "950": "#0e004d",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 16 1`] = `
{
  "100": "#ecf0ff",
  "150": "#e1e7ff",
  "200": "#d4dcff",
  "250": "#c4cfff",
  "300": "#b2c0ff",
  "350": "#9fafff",
  "400": "#8a9cff",
  "50": "#f2f5ff",
  "500": "#7686ff",
  "600": "#626bff",
  "700": "#5249ff",
  "750": "#460fff",
  "800": "#3800d8",
  "850": "#2a00a9",
  "900": "#1b007a",
  "950": "#0e004d",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 17 1`] = `
{
  "100": "#ecf0ff",
  "150": "#e3e9ff",
  "200": "#d6dfff",
  "250": "#c8d3ff",
  "300": "#b8c5ff",
  "350": "#a6b6ff",
  "400": "#93a4ff",
  "50": "#f2f5ff",
  "500": "#8091ff",
  "600": "#6d7bff",
  "650": "#5c60ff",
  "700": "#4d3bff",
  "750": "#4300fc",
  "800": "#3500cf",
  "850": "#2800a3",
  "900": "#1b0078",
  "950": "#0e004d",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 18 1`] = `
{
  "100": "#edf1ff",
  "150": "#e4eaff",
  "200": "#d9e1ff",
  "250": "#cbd6ff",
  "300": "#bdc9ff",
  "350": "#acbbff",
  "400": "#9bacff",
  "450": "#899aff",
  "50": "#f2f5ff",
  "500": "#7787ff",
  "600": "#6670ff",
  "650": "#5655ff",
  "700": "#4a2bff",
  "750": "#4000f1",
  "800": "#3300c8",
  "850": "#26009e",
  "900": "#1a0075",
  "950": "#0e004d",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 19 1`] = `
{
  "100": "#edf1ff",
  "150": "#e5ebff",
  "200": "#dbe2ff",
  "250": "#cfd8ff",
  "300": "#c1cdff",
  "350": "#b2c0ff",
  "400": "#a2b2ff",
  "450": "#91a2ff",
  "50": "#f2f5ff",
  "500": "#8091ff",
  "550": "#6f7dff",
  "600": "#5f67ff",
  "650": "#5249ff",
  "700": "#481aff",
  "750": "#3d00e8",
  "800": "#3100c1",
  "850": "#250099",
  "900": "#190073",
  "950": "#0e004d",
}
`;

exports[`scale > steps option > should generate correct keys for steps: 20 1`] = `
{
  "100": "#eef1ff",
  "1000": "#0e004d",
  "150": "#e6ebff",
  "200": "#dde4ff",
  "250": "#d1daff",
  "300": "#c5d0ff",
  "350": "#b7c4ff",
  "400": "#a8b7ff",
  "450": "#98a9ff",
  "50": "#f2f5ff",
  "500": "#8899ff",
  "550": "#7888ff",
  "600": "#6874ff",
  "650": "#5a5dff",
  "700": "#4e3eff",
  "750": "#450aff",
  "800": "#3a00e0",
  "850": "#2f00ba",
  "900": "#240095",
  "950": "#190071",
}
`;
